--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,8 +1,14 @@
-name: CI/CD - InfoMundi
+# .github/workflows/ci-cd.yml
+name: CI/CD – InfoMundi
 
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
   lint-and-tests:
@@ -11,58 +17,73 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || true
 
       - name: Lint
         run: |
           pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
 
   build-and-deploy:
     runs-on: ubuntu-latest
     needs: lint-and-tests
-    services:
-      docker:
-        image: docker:20.10-dind
-        privileged: true
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push API image
-        uses: docker/build-push-action@v4
+      - name: Build (and Push) image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/infomundi:latest
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+          # si hay usuario de dockerhub -> <user>/infomundi:SHA ; si no -> local/infomundi:SHA
+          tags: ${{ (secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '') && format('{0}/infomundi:{1}', secrets.DOCKERHUB_USERNAME, github.sha) || format('local/infomundi:{0}', github.sha) }}
 
-      - name: Set up Docker Compose for staging
-        run: |
-          docker compose -f .github/compose.staging.yml up -d --build
+  deploy-to-staging:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    if: ${{ secrets.STAGING_SSH_HOST != '' && secrets.STAGING_SSH_USER != '' && secrets.STAGING_SSH_KEY != '' }}
+    steps:
+      - uses: actions/checkout@v3
 
-      - name: Wait for API to be healthy
-        run: |
-          for i in {1..20}; do
-            curl -fs http://localhost:8000/api/cleaned_data && exit 0
-            echo "API not ready yet... retrying"
-            sleep 5
-          done
-          exit 1
+      - name: Copy compose & nginx to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.STAGING_SSH_HOST }}
+          username: ${{ secrets.STAGING_SSH_USER }}
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          source: "compose.staging.yml,nginx.staging.conf"
+          target: "~/infomundi"
 
-      - name: Run integration tests
-        run: |
-          curl -f http://localhost:8000/api/cleaned_data
-          curl -f http://localhost:8000/docs
+      - name: Deploy on server (docker compose up -d)
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.STAGING_SSH_HOST }}
+          username: ${{ secrets.STAGING_SSH_USER }}
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          script: |
+            cd ~/infomundi
+            docker compose -f compose.staging.yml pull || true
+            docker compose -f compose.staging.yml up -d
