--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   lint-and-tests:
+    name: Lint & Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +21,7 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install deps
+      - name: Install deps (best-effort)
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt || true
@@ -28,12 +29,13 @@ jobs:
       - name: Lint
         run: |
           pip install flake8
+          # No fallar la build por warnings de estilo en esta demo
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
 
-  build-and-deploy:
+  build-image:
+    name: Build Docker image (no push)
     runs-on: ubuntu-latest
     needs: lint-and-tests
-
     steps:
       - uses: actions/checkout@v3
 
@@ -43,46 +45,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Log in to DockerHub si hay secretos (se ejecuta igual, pero fallará si no están configurados)
-      - name: Log in to DockerHub
-        if: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # No login (evitamos condicionales con secrets)
+      # Si luego quieres pushear, vuelve a activar el login y el push abajo.
 
-      - name: Build (and Push) image
+      - name: Build image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
-          push: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME || 'local' }}/infomundi:${{ github.sha }}
-
-  deploy-to-staging:
-    runs-on: ubuntu-latest
-    needs: build-and-deploy
-    if: ${{ secrets.STAGING_SSH_HOST && secrets.STAGING_SSH_USER && secrets.STAGING_SSH_KEY }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Copy compose & nginx to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.STAGING_SSH_HOST }}
-          username: ${{ secrets.STAGING_SSH_USER }}
-          key: ${{ secrets.STAGING_SSH_KEY }}
-          source: "compose.staging.yml,nginx.staging.conf"
-          target: "~/infomundi"
-
-      - name: Deploy on server (docker compose up -d)
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.STAGING_SSH_HOST }}
-          username: ${{ secrets.STAGING_SSH_USER }}
-          key: ${{ secrets.STAGING_SSH_KEY }}
-          script: |
-            cd ~/infomundi
-            docker compose -f compose.staging.yml pull || true
-            docker compose -f compose.staging.yml up -d
+          push: false
+          tags: infomundi:ci-${{ github.sha }}
